--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        sf-version: ["6.3.*", "6.4.*", "7.0.*", "7.1.*"]
+        sf-version: ["6.4.*"]
         php-version: ["8.2"]
     steps:
     - uses: shivammathur/setup-php@v2
@@ -32,14 +32,12 @@ jobs:
       id: composer-cache
       uses: actions/cache@v3
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ matrix.php-version }}-symfony-${{ matrix.sf-version }}
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
-          ${{ runner.os }}-php-
+          ${{ runner.os }}-composer-
     - name: Install Dependencies
-      run: |
-        composer config extra.symfony.require ${{ matrix.sf-version }}
-        composer update -q --no-ansi --no-interaction --no-scripts --no-progress
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
     - name: Create Database
       run: |
         mkdir -p data
