--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -37,7 +37,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-composer-
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress
+      run: composer update --no-ansi --no-interaction --no-scripts --no-progress -v
     - name: Create Database
       run: |
         mkdir -p data
