--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.3.*",
-        "symfony/css-selector": "6.3.*",
+        "symfony/browser-kit": "^6.3|^7.0",
+        "symfony/css-selector": "^6.3|^7.0",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "^6.3|^7.0",
         "symfony/maker-bundle": "^1.51",
-        "symfony/phpunit-bridge": "^6.3"
+        "symfony/phpunit-bridge": "^6.3|^7.0"
     },
     "license": "GPL-3.0-or-later",
     "prefer-stable": true,
