--- a/.github/workflows/cleanning.yml
+++ b/.github/workflows/cleanning.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        sf-version: ["6.3.*", "6.4.*", "7.0.*", "7.1.*"]
+        sf-version: ["7.1.*"]
         php-version: ["8.2"]
     steps:
       - uses: shivammathur/setup-php@v2
@@ -56,3 +56,5 @@ jobs:
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
         run: vendor/bin/phpunit
+      - name: Execute phpstan
+        run: vendor/bin/phpstan
