--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,26 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.3.*"
+            "require": "7.1.*"
         }
     },
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.17",
         "symfony/console": "^6.3|^7.0",
         "symfony/dotenv": "^6.3|^7.0",
         "symfony/runtime": "^6.3|^7.0",
         "symfony/yaml": "^6.3|^7.0"
     },
     "require-dev": {
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^6.3|^7.0",
         "symfony/css-selector": "^6.3|^7.0",
@@ -74,7 +81,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     }
