--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*"
+            "require": "7.1.*",
+            "docker": false
         }
     },
     "require": {
@@ -19,7 +20,11 @@
         "symfony/console": "^6.3|^7.0",
         "symfony/dotenv": "^6.3|^7.0",
         "symfony/runtime": "^6.3|^7.0",
-        "symfony/yaml": "^6.3|^7.0"
+        "symfony/twig-bridge": "^6.3|^7.0",
+        "symfony/twig-bundle": "^6.3|^7.0",
+        "symfony/yaml": "^6.3|^7.0",
+        "twig/extra-bundle": "^2.0|^3.0",
+        "twig/twig": "^2.0|^3.0"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.3",
@@ -29,10 +34,14 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^6.3|^7.0",
         "symfony/css-selector": "^6.3|^7.0",
+        "symfony/debug-bundle": "^6.3|^7.0",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "^6.3|^7.0",
-        "symfony/maker-bundle": "^1.51",
-        "symfony/phpunit-bridge": "^6.3|^7.0"
+        "symfony/maker-bundle": "^1.x-dev",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^6.3|^7.0",
+        "symfony/stopwatch": "^6.3|^7.0",
+        "symfony/web-profiler-bundle": "^6.3|^7.0"
     },
     "license": "GPL-3.0-or-later",
     "prefer-stable": true,
