--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 #composer.lock
 /config/*
 #phpunit.xml.dist
+/public/build/*
+!public/build/entrypoints.json
+!public/build/manifest.json
 /public/index.php
 /src/Controller/.gitignore
 /src/Kernel.php
@@ -40,3 +43,10 @@ phpstan.neon
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+#public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
