--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "symfony/console": "^6.3|^7.0",
         "symfony/dotenv": "^6.3|^7.0",
         "symfony/runtime": "^6.3|^7.0",
+        "symfony/stimulus-bundle": "^2.13",
         "symfony/twig-bridge": "^6.3|^7.0",
         "symfony/twig-bundle": "^6.3|^7.0",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "^6.3|^7.0",
         "twig/extra-bundle": "^2.0|^3.0",
         "twig/twig": "^2.0|^3.0"
