--- a/lib/message-bundle/composer.json
+++ b/lib/message-bundle/composer.json
@@ -1,12 +1,11 @@
 {
     "name": "mazarini/message-bundle",
-    "description": "Display alerts.",
+    "description": "Display alerts on webpage.",
     "type": "symfony-bundle",
     "minimum-stability": "dev",
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*",
             "docker": false
         },
         "public-dir": "tests/public"
@@ -15,23 +14,20 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "7.1.*",
-        "symfony/framework-bundle": "7.1.*",
-        "symfony/runtime": "7.1.*",
-        "symfony/twig-bundle": "7.1.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/console": "^6.3|^7.0",
+        "symfony/framework-bundle": "^6.3|^7.0",
+        "symfony/runtime": "^6.3|^7.0",
+        "symfony/twig-bundle": "^6.3|^7.0"
     },
     "require-dev": {
-        "phpstan/phpstan-symfony": "*",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "7.1.*",
-        "symfony/css-selector": "7.1.*",
-        "symfony/dotenv": "7.1.*",
+        "symfony/browser-kit": "^6.3|^7.0",
+        "symfony/css-selector": "^6.3|^7.0",
+        "symfony/dotenv": "^6.3|^7.0",
         "symfony/flex": "^2.4",
-        "symfony/phpunit-bridge": "^6.3",
-        "symfony/yaml": "7.1.*",
-        "symplify/config-transformer": "^12.1"
+        "symfony/maker-bundle": "^1.50",
+        "symfony/phpunit-bridge": "^6.3|^7.0",
+        "symfony/yaml": "^6.3|^7.0"
     },
     "license": "GPL-3.0-or-later",
     "prefer-stable": true,
@@ -58,9 +54,6 @@
         "post-update-cmd": [
             "@auto-scripts"
         ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
     },
     "authors": [
         {
