--- a/lib/crud-bundle/composer.json
+++ b/lib/crud-bundle/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "mazarini/entity-bundle",
-    "description": "Display alerts on webpage.",
+    "name": "mazarini/crud-bundle",
+    "description": "Crud base.",
     "type": "symfony-bundle",
     "minimum-stability": "dev",
     "extra": {
@@ -18,24 +18,30 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "mazarini/message-bundle": "dev-master",
         "symfony/console": "^6.3|^7.0",
-        "symfony/security-csrf": "7.1.*",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "^6.3|^7.0",
-        "symfony/runtime": "^6.3|^7.0"
+        "symfony/runtime": "^6.3|^7.0",
+        "symfony/security-csrf": "7.1.*"
     },
     "require-dev": {
+        "mazarini/entity-bundle": "@dev",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^6.3|^7.0",
         "symfony/css-selector": "^6.3|^7.0",
+        "symfony/debug-bundle": "7.1.*",
         "symfony/dotenv": "^6.3|^7.0",
         "symfony/flex": "^2.4",
         "symfony/maker-bundle": "^1.50",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/phpunit-bridge": "^7.0",
         "symfony/security-bundle": "7.1.*",
-        "symfony/validator": "7.1.*",
-        "symfony/yaml": "^6.3|^7.0",
+        "symfony/stopwatch": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/validator": "7.1.*",
+        "symfony/web-profiler-bundle": "7.1.*",
+        "symfony/yaml": "^6.3|^7.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -43,7 +49,7 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Mazarini\\EntityBundle\\": "src/"
+            "Mazarini\\CrudBundle\\": "src/"
         }
     },
     "autoload-dev": {
@@ -69,6 +75,15 @@
         {
             "name": "Mazarini",
             "email": "mazarini@protonmail.com"
+        }
+    ],
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../*",
+            "options": {
+                "reference": "config"
+            }
         }
     ],
     "config": {
